--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,6 @@ project(objectPool)
 
 # Compile executable
 add_executable(app src/main.cpp)
+
+add_subdirectory(src)
+target_link_libraries(app PRIVATE src)
